# mcp-osm

./: .env.azure.example  .env.dev-claude.example  .env.example  .gitignore  LICENSE.md  Makefile  README.md  docker-compose.ghcr.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy-azure.yml  docker-publish.yml  publish-ollama.yml  release-docker.yml
docs/superpowers/plans/: 2026-04-27-mcp-osm-parity-implementation.md
docs/superpowers/specs/: 2026-04-27-mcp-osm-parity-design.md
infra/bicep/: main.bicep  main.parameters.json
infra/bicep/modules/: container-app-agent.bicep  identity.bicep  (+3 more)
infra/ollama/: Dockerfile  Modelfile  entrypoint.sh
infra/scripts/: deploy.ps1  deploy.sh  destroy.ps1  destroy.sh  setup-github-oidc.sh
osm-agent/: .dockerignore  Dockerfile  OsmAgent.csproj  Program.cs  ThreadRegistry.cs  appsettings.Development.json  appsettings.json
osm-agent/Models/: ChatContracts.cs
osm-mcp/: Dockerfile  pyproject.toml
osm-mcp-agent/: Dockerfile  README.md  pyproject.toml
osm-mcp-agent/src/osm_agent/: __init__.py  api.py  config.py  contracts.py  factory.py  main.py  mcp_surface.py  preview.py
osm-mcp-agent/tests/: test_chat_with_geojson.py  test_compose_endpoint.py  test_contracts.py  test_factory.py  test_geojson_extraction.py
osm-mcp/tests/: test_compose_resources.py  test_geojson_builder.py  test_html_renderer.py
requests/: agent-chat.http
requests/postman/: osm-mcp-agent.postman_collection.json  test-agent-chat.ps1  test-agent-chat.sh
scripts/: deploy-azure.ps1  deploy-azure.sh  test-mcp-inspector.ps1  test-mcp-inspector.sh
(+8 files in other folders)
