[project]
name = "osm-mcp-agent"
version = "0.1.0"
description = "Microsoft Agent Framework agent that consumes the OSM MCP server and renders Leaflet maps. Provider switch ollama/claude/azure_foundry, dual REST + MCP surface."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agent Engineering Studio" }]
dependencies = [
    "agent-framework>=1.0.0b1",
    "agent-framework-ollama>=1.0.0b1",
    "mcp>=1.2.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "geojson>=3.0.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
azure = [
    "azure-identity>=1.17.0",
    "agent-framework-foundry>=1.0.0b1",
]
claude = [
    "agent-framework-anthropic>=1.0.0b1",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.6.0",
]

[project.scripts]
osm-agent = "osm_agent.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osm_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
